[gd_scene load_steps=2 format=3 uid="uid://cts4mqjkgj1vj"]

[ext_resource type="Script" path="res://Scenes/MatchScene/MatchUI/PlayerStatsTable.gd" id="1_5cjys"]

[node name="PlayerStatsTable" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.733333, 0.470588, 0, 1)
script = ExtResource("1_5cjys")

[node name="Headings" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(1280, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Selected" type="Button" parent="Headings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Selected"

[node name="FirstName" type="Button" parent="Headings"]
layout_mode = 2
size_flags_horizontal = 3
text = "First Name"

[node name="LastName" type="Button" parent="Headings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Last Name"

[node name="SpikeHeight" type="Button" parent="Headings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Spike Height"

[node name="BlockHeight" type="Button" parent="Headings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Block Height"

[node name="Serve" type="Button" parent="Headings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Serve"

[node name="Spike" type="Button" parent="Headings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Spike"

[node name="Receive" type="Button" parent="Headings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Receive"

[node name="Set" type="Button" parent="Headings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Set"

[node name="Stamina" type="Button" parent="Headings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stamina"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_top = 40.0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 0
scroll_vertical_custom_step = 20.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Rows" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = -8

[connection signal="pressed" from="Headings/Selected" to="." method="_on_selected_pressed"]
[connection signal="pressed" from="Headings/FirstName" to="." method="_on_first_name_pressed"]
[connection signal="pressed" from="Headings/LastName" to="." method="_on_last_name_pressed"]
[connection signal="pressed" from="Headings/SpikeHeight" to="." method="_on_spike_height_pressed"]
[connection signal="pressed" from="Headings/BlockHeight" to="." method="_on_block_height_pressed"]
[connection signal="pressed" from="Headings/Serve" to="." method="_on_serve_pressed"]
[connection signal="pressed" from="Headings/Spike" to="." method="_on_spike_pressed"]
[connection signal="pressed" from="Headings/Receive" to="." method="_on_receive_pressed"]
[connection signal="pressed" from="Headings/Set" to="." method="_on_set_pressed"]
